conf/icql-static/nginx/deploy-nginx.yaml
# deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-nginx
  namespace: icql-static
  labels:
    app: deploy-nginx
spec:
  selector:
    matchLabels:
      app: pod-nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: pod-nginx
    spec:
      serviceAccountName: cluster-admin
      containers:
        - name: nginx
          image: nginx:1.17.3
          securityContext:
            runAsUser: 0 # 设置以ROOT用户运行容器
            privileged: true # 拥有特权
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 81
              protocol: TCP
            - containerPort: 82
              protocol: TCP
          resources:
            limits:
              memory: 50Mi
              cpu: "100m"
            requests:
              memory: 50Mi
              cpu: "100m"
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 300
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: nginx-data
              mountPath: /static
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-data
          persistentVolumeClaim:
            claimName: pvc-nginx
        - name: nginx-conf
          configMap:
            name: configmap-nginx-conf
